src/snapshots/transmute__resolver__tests__assignment_correct_type_from_function.snap
---
source: src/resolver.rs
expression: "(types, bindings)"
---
(
    [
        None,
        Number,
        Boolean,
        Function,
        Void,
    ],
    {
        Expression(
            ExprId {
                id: 0,
            },
        ): TypeId {
            id: 1,
        },
        Expression(
            ExprId {
                id: 1,
            },
        ): TypeId {
            id: 1,
        },
        Expression(
            ExprId {
                id: 2,
            },
        ): TypeId {
            id: 1,
        },
        Expression(
            ExprId {
                id: 3,
            },
        ): TypeId {
            id: 1,
        },
        Expression(
            ExprId {
                id: 4,
            },
        ): TypeId {
            id: 1,
        },
    },
)
