src/snapshots/transmute__resolver__tests__assignment_to_function_parameter_correct_type.snap
---
source: src/resolver.rs
expression: "(types, bindings)"
---
(
    [
        None,
        Number,
        Boolean,
        Function,
        Void,
    ],
    {
        Expression(
            ExprId {
                id: 0,
            },
        ): TypeId {
            id: 1,
        },
        Expression(
            ExprId {
                id: 1,
            },
        ): TypeId {
            id: 1,
        },
        Expression(
            ExprId {
                id: 2,
            },
        ): TypeId {
            id: 1,
        },
        Parameter(
            StmtId {
                id: 1,
            },
            0,
        ): TypeId {
            id: 1,
        },
    },
)
