src/snapshots/transmute__resolver__tests__bindings_and_types.snap
---
source: src/resolver.rs
expression: "&ast"
---
Hir {
    identifiers: [
        "S",
        "f",
        "a",
        "b",
        "boolean",
        "number",
        "void",
    ],
    identifier_refs: [
        IdentifierRef {
            id: IdentRefId(0),
            ident: Identifier {
                id: IdentId(0),
                span: 1:15; [14, 15],
                bound: Bound(1),
            },
        },
        IdentifierRef {
            id: IdentRefId(1),
            ident: Identifier {
                id: IdentId(0),
                span: 1:28; [27, 28],
                bound: Bound(1),
            },
        },
        IdentifierRef {
            id: IdentRefId(2),
            ident: Identifier {
                id: IdentId(0),
                span: 1:34; [33, 34],
                bound: Bound(1),
            },
        },
        IdentifierRef {
            id: IdentRefId(3),
            ident: Identifier {
                id: IdentId(0),
                span: 1:38; [37, 38],
                bound: Bound(1),
            },
        },
        IdentifierRef {
            id: IdentRefId(4),
            ident: Identifier {
                id: IdentId(2),
                span: 1:42; [41, 42],
                bound: Bound(4),
            },
        },
    ],
    expressions: [
        Expression {
            id: ExprId(0),
            kind: Literal(
                Literal {
                    kind: IdentRefId(4),
                    span: 1:42; [41, 42],
                },
            ),
            span: 1:42; [41, 42],
            typed: Typed(5),
        },
        Expression {
            id: ExprId(1),
            kind: Block(
                [
                    StmtId(1),
                ],
            ),
            span: 1:40; [39, 45],
            typed: Typed(2),
        },
    ],
    statements: [
        Statement {
            id: StmtId(0),
            kind: Struct(
                Identifier {
                    id: IdentId(0),
                    span: 1:8; [7, 8],
                    bound: Bound(1),
                },
                [
                    Field {
                        identifier: Identifier {
                            id: IdentId(1),
                            span: 1:12; [11, 12],
                            bound: Bound(3),
                        },
                        ty: IdentRefId(0),
                        span: 1:12; [11, 15],
                        typed: Typed(5),
                    },
                ],
            ),
            span: 1:1; [0, 17],
        },
        Statement {
            id: StmtId(1),
            kind: Ret(
                ExprId(0),
                Implicit,
            ),
            span: 1:42; [41, 43],
        },
        Statement {
            id: StmtId(2),
            kind: LetFn(
                Identifier {
                    id: IdentId(1),
                    span: 1:23; [22, 23],
                    bound: Bound(2),
                },
                [
                    Parameter {
                        identifier: Identifier {
                            id: IdentId(2),
                            span: 1:25; [24, 25],
                            bound: Bound(4),
                        },
                        ty: IdentRefId(1),
                        span: 1:25; [24, 28],
                        typed: Typed(5),
                    },
                    Parameter {
                        identifier: Identifier {
                            id: IdentId(3),
                            span: 1:31; [30, 31],
                            bound: Bound(5),
                        },
                        ty: IdentRefId(2),
                        span: 1:31; [30, 34],
                        typed: Typed(5),
                    },
                ],
                Return {
                    ret: Some(
                        IdentRefId(3),
                    ),
                    typed: Typed(5),
                },
                ExprId(1),
            ),
            span: 1:19; [18, 45],
        },
    ],
    root: [
        StmtId(0),
        StmtId(2),
    ],
    symbols: [
        Symbol {
            id: SymbolId(0),
            kind: NotFound,
            ty: TypeId(0),
        },
        Symbol {
            id: SymbolId(1),
            kind: Struct(
                StmtId(0),
            ),
            ty: TypeId(5),
        },
        Symbol {
            id: SymbolId(2),
            kind: LetFn(
                StmtId(2),
                [
                    TypeId(5),
                    TypeId(5),
                ],
                TypeId(5),
            ),
            ty: TypeId(6),
        },
        Symbol {
            id: SymbolId(3),
            kind: Field(
                StmtId(0),
                0,
            ),
            ty: TypeId(5),
        },
        Symbol {
            id: SymbolId(4),
            kind: Parameter(
                StmtId(2),
                0,
            ),
            ty: TypeId(5),
        },
        Symbol {
            id: SymbolId(5),
            kind: Parameter(
                StmtId(2),
                1,
            ),
            ty: TypeId(5),
        },
    ],
    types: [
        Invalid,
        Void,
        None,
        Boolean,
        Number,
        Struct(
            StmtId(0),
        ),
        Function(
            [
                TypeId(5),
                TypeId(5),
            ],
            TypeId(5),
        ),
    ],
    exit_points: ExitPoints {
        exit_points: {
            ExprId(1): [
                Implicit(
                    ExprId(0),
                ),
            ],
        },
        unreachable: [],
    },
}
