src/snapshots/transmute__resolver__tests__function_invalid_return_type_after_valid_return_type.snap
---
source: src/resolver.rs
expression: "(types, bindings)"
---
(
    [
        None,
        Number,
        Boolean,
        Function,
        Void,
    ],
    {
        Expression(
            ExprId {
                id: 0,
            },
        ): TypeId {
            id: 1,
        },
        Expression(
            ExprId {
                id: 1,
            },
        ): TypeId {
            id: 2,
        },
        Expression(
            ExprId {
                id: 2,
            },
        ): TypeId {
            id: 0,
        },
        Parameter(
            StmtId {
                id: 2,
            },
            0,
        ): TypeId {
            id: 1,
        },
    },
)
