src/snapshots/transmute__resolver__tests__if_type.snap
---
source: src/resolver.rs
expression: "(types, bindings)"
---
(
    [
        None,
        Number,
        Boolean,
        Void,
    ],
    {
        Expression(
            ExprId {
                id: 0,
            },
        ): TypeId {
            id: 1,
        },
        Expression(
            ExprId {
                id: 1,
            },
        ): TypeId {
            id: 2,
        },
        Expression(
            ExprId {
                id: 2,
            },
        ): TypeId {
            id: 1,
        },
        Expression(
            ExprId {
                id: 3,
            },
        ): TypeId {
            id: 1,
        },
        Expression(
            ExprId {
                id: 4,
            },
        ): TypeId {
            id: 1,
        },
        Expression(
            ExprId {
                id: 5,
            },
        ): TypeId {
            id: 1,
        },
        Expression(
            ExprId {
                id: 6,
            },
        ): TypeId {
            id: 1,
        },
        Expression(
            ExprId {
                id: 7,
            },
        ): TypeId {
            id: 1,
        },
    },
)
